# pco25_lab04

./: CMakeLists.txt  pco_rendu.sh  rapport.md
QtrainSim/: CMakeLists.txt
QtrainSim/src/: simview.cpp
code/: CMakeLists.txt
code/src/: cppmain.cpp  launchable.h  locomotive.cpp  locomotive.h  locomotivebehavior.cpp  locomotivebehavior.h  sharedsection.h  sharedsectioninterface.h
code/tests/: fake_locomotive.h  main.cpp
